--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+dash==2.17.1
 dash-bootstrap-components==1.6.0
 dash-core-components==2.0.0
+dash-daq==0.5.0
 dash-html-components==2.0.0
 dash-table==5.0.0
-dash_daq==0.5.0
+diskcache==5.6.3
 docutils==0.20.1
 Flask==3.0.3
 google-api-core==2.18.0
